[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/fonts/Bungee_Shade/BungeeShade-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/fonts/Orbitron/static/Orbitron-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/fonts/Orbitron/Orbitron-VariableFont_wght.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 39
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.498413
margin_bottom = -0.498413
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.354
margin_top = -262.209
margin_right = 183.646
margin_bottom = -87.2094
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.545098, 0.545098, 1 )
custom_constants/line_spacing = 10
text = "Dungeon 
Dance Dance"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MadeBy" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = 105.0
margin_right = 137.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 2 )
text = "Made by"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AndLabel" type="Label" parent="MadeBy"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.2308
margin_top = 66.0821
margin_right = 29.7692
margin_bottom = 91.0822
text = "&"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shiryel" type="LinkButton" parent="MadeBy"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -39.1236
margin_top = 37.1689
margin_right = 46.8764
margin_bottom = 58.1689
custom_fonts/font = SubResource( 3 )
text = "@shiryel_"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoxoFoxo" type="LinkButton" parent="MadeBy"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -67.027
margin_top = 91.0234
margin_right = 70.973
margin_bottom = 112.023
custom_fonts/font = SubResource( 4 )
text = "@RoxoTheFoxo"
underline = 2

[node name="source" type="LinkButton" parent="MadeBy"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -121.5
margin_top = 173.0
margin_right = 119.5
margin_bottom = 194.0
custom_fonts/font = SubResource( 4 )
text = "Source on github, click here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
modulate = Color( 1, 0.811765, 0.811765, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.3929
margin_top = -58.6174
margin_right = 68.6071
margin_bottom = -5.61737
custom_fonts/font = SubResource( 5 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MadeBy/Shiryel" to="." method="_on_Shiryel_pressed"]
[connection signal="pressed" from="MadeBy/RoxoFoxo" to="." method="_on_RoxoFoxo_pressed"]
[connection signal="pressed" from="MadeBy/source" to="." method="_on_source_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
